# retrieval-demo

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  compose.yaml  pyproject.toml
docs/: hybrid-ingestion-pipeline.md  hybrid-retrieval.md  kg2rag-retrieval.md  multiquery-retrieval.md  rag-ingestion-pipeline.md  rerank-retrieval.md  semantic-retrieval.md
eval/: evaluator.py  judges.py  metrics.py
eval/cli/: prepare_dataset.py  run_chunking_eval.py  run_retrieval_eval.py
eval/data/: .gitkeep  categorization_cache.json
src/retrieval_demo/: __init__.py
src/retrieval_demo/agent/: agent_state.py  graph.py  nodes.py
src/retrieval_demo/agent/retrievers/: __init__.py  base.py  factory.py  hybrid.py  multiquery.py  rerank.py  semantic.py
src/retrieval_demo/dataloader/: categorization.py  dataset.py
src/retrieval_demo/dataloader/chunking/: base.py  recursive.py  semantic.py
src/retrieval_demo/dataloader/data/: loader.py
src/retrieval_demo/eval/: dataset.py  judges.py  langsmith_evaluators.py  metrics.py
src/retrieval_demo/eval/cli/: prepare_dataset.py  run_chunking_eval.py  run_retrieval_eval.py
src/retrieval_demo/pipeline/: ingestion.py  run_ingestion.py
src/retrieval_demo/vectorstore/: __init__.py  client.py  models.py
tests/: conftest.py  test_chunking.py  test_retriever_factory.py  test_vectorstore_integration.py  test_weaviate_client_singleton.py
tests/agent/retrievers/: test_factory.py  test_hybrid.py  test_multiquery.py  test_rerank.py  test_semantic.py
tests/dataloader/: __init__.py  test_categorization.py  test_loader.py
tests/eval/: test_dataset.py  test_evaluator.py  test_judges.py  test_metrics.py
tests/vectorstore/: test_client.py  test_integration.py
