[project]
name = "retrieval-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kevin Solorio", email = "103829+ksolo@users.noreply.github.com" }
]
requires-python = ">=3.13.7"
dependencies = [
    "langgraph>=0.6.7",
    "openevals>=0.1.0",
    "python-dotenv>=1.1.1",
]

[project.scripts]
retrieval-demo = "retrieval_demo:main"

[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "ruff>=0.13.1",
]
